update CRUD Plate
- change the model mapper
- handle exceptions in one global handler
- add more checks in update and create method
- make safe delete